# bengaluru-civic-truth-engine

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  render.yaml
api/: __init__.py  app.py  service.py
civic_data/: __init__.py  __main__.py  anthropic_packet_client.py  case_model.py  claim_builder.py  cli.py  contracts.py  demo_report.py  dossier.py  evidence_matcher.py  fetch.py  freshness.py  geo_boundary.py  issue_router.py  jurisdiction.py  llm_config.py  locality.py  model_matrix.py  normalize.py  openai_packet_client.py  packet.py  packet_builder.py  packet_eval.py  packet_explainer.py  packet_rag.py  packet_rag_eval.py  packet_retrieval.py  profile.py  provenance.py  rag.py  registry.py  retrieval_eval.py  safety.py  site.py  source_monitor.py  source_policy.py  trace.py  trace_inspector.py  trace_writer.py  truth.py  (+3 more)
docs/: architecture.md  data-architecture.md  data-dictionary.md  demo.md  deployment.md  evaluation.md  implementation-plan.md  known-limitations.md  project-showcase.md  public-launch.md  source-policy.md  system-design.md
registry/: source_schema.json  sources.yaml
scripts/: secret_scan.py
tests/: test_action_packet_contract_schema.py  test_civic_case_pipeline.py  test_cli.py  test_demo_packet_quality.py  test_demo_report.py  test_dossier.py  test_fetch_archive_profile.py  test_geo_boundary.py  test_model_matrix.py  test_normalize_truth.py  test_packet_eval.py  test_packet_llm_rag.py  test_packet_retrieval_eval.py  test_packet_v2_contract.py  test_packet_v3_hardening.py  test_rag_backend.py  (+12 more)
(+63 files in other folders)
